[bumpversion]
current_version = 0.1.1
commit = False
tag = False

[bumpversion:file:src/relentless/__init__.py]

[bumpversion:file:doc/source/conf.py]

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    __init__.py:F401

[metadata]
name = relentless
version = attr: relentless.__version__
author = Michael P. Howard
author_email = mphoward@auburn.edu
description = Computational materials design, with less code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mphowardlab/relentless
project_urls =
    Documentation = https://relentless.readthedocs.io
    Source Code = https://github.com/mphowardlab/relentless
    Issue Tracker = https://github.com/mphowardlab/relentless/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =
    freud-analysis>=2
    gsd
    lammpsio>=0.4
    networkx>=2.5
    numpy
    packaging
    scipy

[options.packages.find]
where = src
