[bumpversion]
current_version = 0.2.1
commit = False
tag = False

[bumpversion:file:src/relentless/__init__.py]

[bumpversion:file:doc/source/conf.py]

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    __init__.py:F401

[metadata]
name = relentless
version = attr: relentless.__version__
author = Michael P. Howard
author_email = mphoward@auburn.edu
description = Computational materials design, with less code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mphowardlab/relentless
project_urls =
    Documentation = https://relentless.readthedocs.io
    Source Code = https://github.com/mphowardlab/relentless
    Issue Tracker = https://github.com/mphowardlab/relentless/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.12
install_requires =
    freud-analysis>=3.2
    gsd>=3.3
    lammpsio>=0.7
    networkx>=3.4
    numpy>=2.1
    packaging
    scipy>=1.15

[options.packages.find]
where = src
